test/single-stack/ingress-services.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: myservicea.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ignored-ingress
  namespace: default
  labels:
    k8s-gateway.dns/ignore: "true"
spec:
  ingressClassName: cilium
  rules:
    - host: ignored.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ignored-service
  namespace: default
  labels:
    k8s-gateway.dns/ignore: "true"
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
