test/single-stack/service-annotation.yml
---
apiVersion: v1
kind: Service
metadata:
  name: annotation-good
  namespace: default
  annotations:
    "coredns.io/hostname": "good.ok"
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: annotation-bad
  namespace: default
  annotations:
    "coredns.io/hostname": "abcd0123456789012345678901234567890123456789012345678901234567890"
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: annotation-bad-2
  namespace: default
  annotations:
    "coredns.io/hostname": "foo_bar"
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
